--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "matheo-project",
-  "source": "index.html",
+  "name": "quick-parcel-project",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.html",
   "scripts": {
-    "start": "parcel",
-    "build": "parcel build"
+    "start": "parcel index.html",
+    "start-multiple-entries": "parcel index.html centered.html what.html ",
+    "build": "parcel build index.html"
+  },
+  "dependencies": {
+    "assets": "^3.0.1",
+    "parcel-plugin-asset-copier": "^1.1.0",
+    "parcel-plugin-html-root-syntax": "0.0.3",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.10.2",
-    "parcel": "^2.10.2"
+    "parcel-bundler": "^1.6.1",
+    "sass": "^1.26.11",
+    "typescript": "^4.4.3"
   },
-  "parcel": {
-    "entries": {
-      "index.html": {
-        "transformers": {
-          "sass": {}
-        }
-      }
-    }
-  }
+  "keywords": [],
+  "assetsPath": "assets"
 }
