--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quick-parcel-project",
+  "name": "matheo-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
